<resources>
    <string name="app_name">kanban-board</string>
    <string name="authorization">Авторизация</string>
    <string name="to_sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="title_activity_kanban">Kanban</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="s_profile">Профиль</string>
    <string name="s_calendar">Календарь</string>
    <string name="s_messages">Мессенджер</string>
    <string name="s_tasks">Задачи</string>
    <string name="log_out">Выйти</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="todo">Сделать</string>
    <string name="exec">В процессе</string>
    <string name="view">На рассмотрении</string>
    <string name="done">Готово</string>
    <string name="add_ticket">Добавить задачу</string>
    <string name="add_board">Добавить доску</string>
    <string name="signed_as">Вы вошли как</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_login">Логин</string>
    <string name="password">Пароль</string>
    <string name="tickets">Тикеты</string>
    <string name="messages">Сообщения</string>
    <string name="import_message">Введите сообщение</string>
    <string name="profile">Профиль</string>
    <string name="text_example">текст</string>
    <string name="sender_example">Отправитель:</string>
    <string name="full_name">Full name</string>
    <string name="login">Login</string>
    <string name="organization">Organization</string>
    <string name="password_en">Password</string>
    <string name="name">Название</string>
    <string name="profile_user_login">user_login</string>
    <string name="email_hint">Email</string>
    <string name="content_description_send">Send</string>
    <string name="board_name">BoardName</string>
</resources>