<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/btn_sing_in_stroke"
            app:met_singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_name_field"
            android:hint="@string/full_name"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/btn_sing_in_stroke"
            app:met_singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_field"
            android:hint="@string/login"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/btn_sing_in_stroke"
            app:met_singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/org_field"
            android:hint="@string/organization"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/btn_sing_in_stroke"
            app:met_singleLineEllipsis="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:hint="@string/password_en"
            android:inputType="textPassword"
            android:text=""
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/btn_sing_in_stroke"
            app:met_singleLineEllipsis="true"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>