<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Kanban_menu"
    android:background="@color/back"
    android:id="@+id/container"
    android:padding="10dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">


        <GridLayout
            android:id="@+id/header_table"
            android:paddingTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:orientation="horizontal"
            android:layout_marginStart="15dp">

                <TextView
                    style="@style/textview"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/todo">

                </TextView>

                <TextView
                    style="@style/textview"
                    android:text="@string/exec"
                    android:paddingRight="10dp">

                </TextView>

                <TextView
                    style="@style/textview"
                    android:text="@string/view"
                    android:paddingRight="10dp">

                </TextView>

                <TextView
                    style="@style/textview"
                    android:text="@string/done">

                </TextView>


        </GridLayout>

        <LinearLayout
            android:id="@+id/task_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_table">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_grid"
            android:gravity="center"
            android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/addTicket"
                    style="@style/Buttons_def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addticket"
                    />


        </LinearLayout>



</RelativeLayout>


</ScrollView>